--- a/preprocessing/preprocessing.ipynb
+++ b/preprocessing/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "23831b45-f508-4eba-948e-46d7b3f66334",
+       "ref": "0e460e85-7875-4e81-b080-23d14603cd27",
        "rows": [
         [
          "0",
@@ -2090,7 +2090,7 @@
        "[5 rows x 175 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2160,11 +2160,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df[columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(314, 20)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -2175,30 +2195,10 @@
     {
      "data": {
       "text/plain": [
-       "(314, 20)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2218,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2227,7 @@
        "(314, 20)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "34c92ba7-c4e4-4a98-aaea-f473fedff2d2",
+       "ref": "e08a0991-5a5d-4c25-aa07-00a9b0f4da17",
        "rows": [
         [
          "count",
@@ -2907,7 +2907,7 @@
        "max                    16.000000                   16.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2925,7 +2925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3048,7 +3048,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "916b297d-06a0-448b-bb29-54562a490b2d",
+       "ref": "f59136ac-6047-4fe3-b970-268c9e29c5a4",
        "rows": [],
        "shape": {
         "columns": 20,
@@ -3107,7 +3107,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3125,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3145,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3159,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3268,7 +3268,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "506d8af5-0251-47be-ae54-8d4d501c6143",
+       "ref": "a6486e14-0125-4b60-af2e-13520c082fea",
        "rows": [
         [
          "count",
@@ -3765,7 +3765,7 @@
        "max                    16.000000                   16.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3805,7 +3805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3814,7 +3814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3826,14 +3826,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\ydata_profiling\\utils\\dataframe.py:137: SettingWithCopyWarning: \n",
+      "c:\\Users\\jgala\\Documents\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\ydata_profiling\\utils\\dataframe.py:137: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3843,7 +3843,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5818c7557db4542a5abf68547310f14",
+       "model_id": "617b7613c3f5472594c7faf57951eef5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3858,19 +3858,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\ydata_profiling\\model\\correlations.py:66: UserWarning: There was an attempt to calculate the auto correlation, but this failed.\n",
-      "To hide this warning, disable the calculation\n",
-      "(using `df.profile_report(correlations={\"auto\": {\"calculate\": False}})`\n",
-      "If this is problematic for your use case, please report this as an issue:\n",
-      "https://github.com/ydataai/ydata-profiling/issues\n",
-      "(include the error message: 'could not convert string to float: 'D'')\n",
-      "  warnings.warn(\n"
+      "100%|██████████| 20/20 [00:00<?, ?it/s]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "753b47a7633e4c04b117312b4725720a",
+       "model_id": "2cc600d2b9b34f6d8bb68ed79b1df46f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3884,7 +3878,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "085fc60ec0d44c9d8b605fbd6daf905b",
+       "model_id": "7cdac696c4464238b261f9eea0a94770",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3898,7 +3892,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71e317851e2f4002a919c240a917b8c6",
+       "model_id": "1707f022c3704618ad3aa41521401589",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3932,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4022,7 +4016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -4036,7 +4030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
