--- a/preprocessing/preprocessing_v2.ipynb
+++ b/preprocessing/preprocessing_v2.ipynb
@@ -929,7 +929,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a7842fb5-c014-45f5-9cc3-82488fb5a2cc",
+       "ref": "f7b9c31b-5c73-4127-a350-71c90bcbe5b3",
        "rows": [
         [
          "0",
@@ -2331,7 +2331,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "98e840f7-c6dc-4a28-87a7-560fb4b96b43",
+       "ref": "c67acf8b-d1df-4804-a361-37aab279b6f4",
        "rows": [
         [
          "0",
@@ -2849,6 +2849,7 @@
     "    sns.countplot(data=df, x=col, order=df[col].value_counts().index)\n",
     "    plt.title(f'Distribución marginal de {col}')\n",
     "    plt.xticks(rotation=45)\n",
+    "    plt.savefig(f'plots/marginal_{col}.png')\n",
     "    plt.close()"
    ]
   },
@@ -4233,126 +4234,481 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Codificar variables categóricas. TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. Generar reporte datos"
+    "#### Codificar variables categóricas\n",
+    "Ya vienen codificadas. La variable objetivo ED_2Clases no hace falta codificarla"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ydata_profiling import ProfileReport"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate the Profiling Report\n",
-    "profile = ProfileReport(\n",
-    "    df, title=\"Dataset\", html={\"style\": {\"full_width\": True}}, sort=None\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "670e5f296f9d4c0d8c3aec7afde5e5b3",
-       "version_major": 2,
-       "version_minor": 0
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "ED_2Clases",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "clin-reservaCognitiva_escolaridad",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "demo-genero",
+         "rawType": "category",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "7961610c-fa79-4f78-8d59-37c91831553f",
+       "rows": [
+        [
+         "0",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "1",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "2",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "3",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "4",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "5",
+         "D",
+         "2",
+         "2"
+        ],
+        [
+         "6",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "7",
+         "D",
+         "5",
+         "1"
+        ],
+        [
+         "8",
+         "D",
+         "2",
+         "2"
+        ],
+        [
+         "9",
+         "D",
+         "3",
+         "1"
+        ],
+        [
+         "10",
+         "H",
+         "5",
+         "2"
+        ],
+        [
+         "11",
+         "D",
+         "2",
+         "1"
+        ],
+        [
+         "12",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "13",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "14",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "15",
+         "H",
+         "5",
+         "2"
+        ],
+        [
+         "16",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "17",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "18",
+         "H",
+         "4",
+         "2"
+        ],
+        [
+         "19",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "20",
+         "D",
+         "4",
+         "2"
+        ],
+        [
+         "21",
+         "H",
+         "5",
+         "1"
+        ],
+        [
+         "22",
+         "D",
+         "2",
+         "1"
+        ],
+        [
+         "23",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "24",
+         "H",
+         "4",
+         "2"
+        ],
+        [
+         "25",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "26",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "27",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "28",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "29",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "30",
+         "D",
+         "5",
+         "1"
+        ],
+        [
+         "31",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "32",
+         "H",
+         "5",
+         "2"
+        ],
+        [
+         "33",
+         "D",
+         "5",
+         "1"
+        ],
+        [
+         "34",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "35",
+         "D",
+         "3",
+         "1"
+        ],
+        [
+         "36",
+         "D",
+         "5",
+         "1"
+        ],
+        [
+         "37",
+         "D",
+         "3",
+         "1"
+        ],
+        [
+         "38",
+         "D",
+         "3",
+         "1"
+        ],
+        [
+         "39",
+         "H",
+         "4",
+         "1"
+        ],
+        [
+         "40",
+         "H",
+         "4",
+         "2"
+        ],
+        [
+         "41",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "42",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "43",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "44",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "45",
+         "D",
+         "4",
+         "1"
+        ],
+        [
+         "46",
+         "D",
+         "3",
+         "2"
+        ],
+        [
+         "47",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "48",
+         "D",
+         "5",
+         "2"
+        ],
+        [
+         "49",
+         "D",
+         "3",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 314
+       }
       },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ED_2Clases</th>\n",
+       "      <th>clin-reservaCognitiva_escolaridad</th>\n",
+       "      <th>demo-genero</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>D</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>D</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>D</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>D</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>314 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+       "    ED_2Clases clin-reservaCognitiva_escolaridad demo-genero\n",
+       "0            D                                 3           2\n",
+       "1            D                                 3           2\n",
+       "2            D                                 4           2\n",
+       "3            D                                 4           2\n",
+       "4            D                                 4           2\n",
+       "..         ...                               ...         ...\n",
+       "309          D                                 4           2\n",
+       "310          D                                 4           2\n",
+       "311          D                                 5           1\n",
+       "312          D                                 5           2\n",
+       "313          D                                 3           1\n",
+       "\n",
+       "[314 rows x 3 columns]"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\ydata_profiling\\model\\correlations.py:66: UserWarning: There was an attempt to calculate the auto correlation, but this failed.\n",
-      "To hide this warning, disable the calculation\n",
-      "(using `df.profile_report(correlations={\"auto\": {\"calculate\": False}})`\n",
-      "If this is problematic for your use case, please report this as an issue:\n",
-      "https://github.com/ydataai/ydata-profiling/issues\n",
-      "(include the error message: 'could not convert string to float: 'D'')\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abc0513bdf254394bd9d449d48302989",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa88ee556dca4241803932dfe7280109",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62c43c1899a64401812c9be69f26d7e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "profile.to_file(\"profile_report.html\")"
+    "df.select_dtypes(include='category')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Dividir datos entrenamiento y test"
+    "#### Dividir datos entrenamiento y test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4362,7 +4718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4496,10 +4852,8 @@
     "for i in range(10):\n",
     "    train_set = df.iloc[train_indices[i]]\n",
     "    test_set = df.iloc[test_indices[i]]\n",
-    "    \n",
     "    train_set.to_csv(f'../data/train/set_{i}.csv', index=False)\n",
     "    test_set.to_csv(f'../data/test/set_{i}.csv', index=False)\n",
-    "    \n",
     "    print(f\"Fold {i+1}:\")\n",
     "    print(f\"  Train - Total: {len(train_set)}, Distribución de clases: {train_set['ED_2Clases'].value_counts(normalize=True)}\")\n",
     "    print(f\"  Test  - Total: {len(test_set)}, Distribución de clases: {test_set['ED_2Clases'].value_counts(normalize=True)}\")\n",
@@ -4509,7 +4863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -4523,7 +4877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
