--- a/2_modeling/2_1_customization.ipynb
+++ b/2_modeling/2_1_customization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "4c52041e",
    "metadata": {},
    "outputs": [],
@@ -14,21 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "9c4f3ba8",
    "metadata": {},
    "outputs": [],
    "source": [
     "dtype = {\n",
     "    \"ED_2Clases\": 'category',\n",
-    "    \"clin-reservaCognitiva_escolaridad\": 'category',\n",
-    "    \"demo-genero\": 'category'\n",
+    "    #\"clin-reservaCognitiva_escolaridad\": 'category',\n",
+    "    #\"demo-genero\": 'category'\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "782ad747",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "8d0a3e99",
    "metadata": {},
    "outputs": [
@@ -52,9 +52,9 @@
       " #   Column                              Non-Null Count  Dtype   \n",
       "---  ------                              --------------  -----   \n",
       " 0   ED_2Clases                          314 non-null    category\n",
-      " 1   clin-reservaCognitiva_escolaridad   314 non-null    category\n",
+      " 1   clin-reservaCognitiva_escolaridad   314 non-null    int64   \n",
       " 2   demo-edad                           314 non-null    int64   \n",
-      " 3   demo-genero                         314 non-null    category\n",
+      " 3   demo-genero                         314 non-null    int64   \n",
       " 4   eval-TLP-CubCorsi-totalDirectos-PD  314 non-null    float64 \n",
       " 5   eval-TLP-CubCorsi-totalinversos-PD  314 non-null    float64 \n",
       " 6   eval-TLP-CubCorsi-total-PD          314 non-null    float64 \n",
@@ -71,8 +71,8 @@
       " 17  eval-TLP-Tavec-3_RI_AT-PD           314 non-null    float64 \n",
       " 18  eval-TLP-Tavec-8_RL_CP-PD           314 non-null    float64 \n",
       " 19  eval-TLP-Tavec-9_RCl_CP-PD          314 non-null    float64 \n",
-      "dtypes: category(3), float64(16), int64(1)\n",
-      "memory usage: 43.1 KB\n"
+      "dtypes: category(1), float64(16), int64(3)\n",
+      "memory usage: 47.1 KB\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "9775137f",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "5fe03e6a",
    "metadata": {},
    "outputs": [
@@ -105,6 +105,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:716: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  sk = 2*(b-a)*np.sqrt(a + b + 1) / (a + b + 2) / np.sqrt(a*b)\n",
+      "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:721: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n",
+      "  a, b = optimize.fsolve(func, (1.0, 1.0))\n",
       "c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.conda\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:721: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
       "  improvement from the last ten iterations.\n",
       "  a, b = optimize.fsolve(func, (1.0, 1.0))\n",
@@ -157,14 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "2c087b38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'demo-edad': 'gaussian_kde',\n",
+       "{'clin-reservaCognitiva_escolaridad': 'gaussian_kde',\n",
+       " 'demo-edad': 'gaussian_kde',\n",
+       " 'demo-genero': 'gaussian_kde',\n",
        " 'eval-TLP-CubCorsi-totalDirectos-PD': 'gaussian_kde',\n",
        " 'eval-TLP-CubCorsi-totalinversos-PD': 'gamma',\n",
        " 'eval-TLP-CubCorsi-total-PD': 'gaussian_kde',\n",
@@ -183,7 +190,7 @@
        " 'eval-TLP-Tavec-9_RCl_CP-PD': 'gaussian_kde'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "3be85921",
    "metadata": {},
    "outputs": [],
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "1832b218",
    "metadata": {},
    "outputs": [
@@ -213,25 +220,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'clin-reservaCognitiva_escolaridad', 'low_value': 0, 'high_value': 5, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'demo-edad', 'low_value': 18, 'high_value': 100, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'demo-genero', 'low_value': 0, 'high_value': 1, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalDirectos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalinversos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-total-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-Duracion-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalCopia-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalMemoria-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabras-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-color-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabrasColor-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-1_RI_A1-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-10_RL_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-11_RCl_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-2_RI_A5-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-3_RI_AT-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-8_RL_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
-      "{'constraint_class': 'ScalarRange', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-9_RCl_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n"
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'clin-reservaCognitiva_escolaridad', 'low_value': 0, 'high_value': 5, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'demo-edad', 'low_value': 18, 'high_value': 100, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'demo-genero', 'low_value': 1, 'high_value': 2, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalDirectos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-totalinversos-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-CubCorsi-total-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-Duracion-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalCopia-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-FigRey-totalMemoria-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabras-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-color-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Stroop-palabrasColor-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-1_RI_A1-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-10_RL_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-11_RCl_LP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-2_RI_A5-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-3_RI_AT-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-8_RL_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n",
+      "{'constraint_class': 'ScalarRange', 'table_name': 'TLP', 'constraint_parameters': {'column_name': 'eval-TLP-Tavec-9_RCl_CP-PD', 'low_value': 0.0, 'high_value': 1.0, 'strict_boundaries': False}}\n"
      ]
     }
    ],
@@ -245,6 +252,7 @@
     "        # Para la edad, se establece un rango de 18 a 100 años\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
+    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
     "                'low_value': 18,\n",
@@ -257,6 +265,7 @@
     "        # Para la escolaridad, se establece un rango de 0 a 5\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
+    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
     "                'low_value': 0,\n",
@@ -266,13 +275,14 @@
     "        }\n",
     "        constraints.append(my_constraint)\n",
     "    elif col == 'demo-genero':\n",
-    "        # Para el género, se establece un rango de 0 a 1\n",
+    "        # Para el género, se establece un rango de 1 a 2\n",
     "        my_constraint = {\n",
     "            'constraint_class': 'ScalarRange',\n",
+    "            'table_name': 'TLP',\n",
     "            'constraint_parameters': {\n",
     "                'column_name': col,\n",
-    "                'low_value': 0,\n",
-    "                'high_value': 1,\n",
+    "                'low_value': 1,\n",
+    "                'high_value': 2,\n",
     "                'strict_boundaries': False\n",
     "            }\n",
     "        }\n",
@@ -282,6 +292,7 @@
     "        max_val = df[col].max()\n",
     "        my_constraint = {\n",
     "        'constraint_class': 'ScalarRange',\n",
+    "        'table_name': 'TLP',\n",
     "        'constraint_parameters': {\n",
     "            'column_name': col,\n",
     "            'low_value': min_val,\n",
@@ -298,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "2bee7656",
    "metadata": {},
    "outputs": [],
